--- a/admin-dataset.html
+++ b/admin-dataset.html
@@ -95,7 +95,7 @@
 
     <div class="footer">
         <p>© Project ANI 2021</p>
-        <p>Made by the CITCS team</p>
+        <p>Developed by the CITCS team</p>
     </div>  
 </body>
 </html>
