--- a/Index.html
+++ b/Index.html
@@ -1375,7 +1375,7 @@
         <!--Footer and Admin-->
         <div class="footer">
             <p>© Project ANI 2021</p>
-            <p>Made by the CITCS team</p>
+            <p>Developed by the CITCS team</p>
             <button onclick="document.getElementById('id01').style.display='block'" style="width:auto">ADMIN LOGIN</button>
             <div id="id01" class="modalfooter">
   
